--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -180,14 +180,16 @@
                                     <MExpansionPanelContent>
                                         @if (configObject.RelationConfigObjectId != 0)
                                         {
-                                            <MCard Style="border:1px solid #E2E7F4;" Class="py-3 mt-4 rounded-5">
-                                                <MDataTable FixedHeader Style="max-height: 312px; overflow: auto;" Headers="Headers"
-                                                        SortDesc="true"
-                                                        SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
-                                                        TItem="ConfigObjectPropertyModel"
-                                                        Items="@configObject.ConfigObjectPropertyContents"
-                                                        Class="table-border-none"
-                                                        HideDefaultFooter>
+                                            <MCard Style="border:1px solid #E2E7F4;" Class="py-2 mt-4 rounded-5">
+                                                <MDataTable FixedHeader
+                                                            Style="max-height: 312px; overflow: auto; border-radius: unset !important;"
+                                                            Headers="Headers"
+                                                            SortDesc="true"
+                                                            SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
+                                                            TItem="ConfigObjectPropertyModel"
+                                                            Items="@configObject.ConfigObjectPropertyContents"
+                                                            Class="table-border-none"
+                                                            HideDefaultFooter>
                                                         <HeaderColContent Context="header">
                                                             <span class="regular3--text btn">@header.Text</span>
                                                         </HeaderColContent>
@@ -220,7 +222,7 @@
                                                                     <DateTimeZone Value="@context.Item.ModificationTime" />
                                                                     break;
                                                                 default:
-                                                                    @context.Value
+                                                                    <div style="width: 135px;" class="text-overflow">@context.Value</div>
                                                                     break;
                                                             }
                                                         </ItemColContent>
@@ -237,14 +239,16 @@
                                                            Dense
                                                            Tabs="@(new List<string>{ T("Table"), T("Text") })">
                                                     <SElevationTabItem>
-                                                        <MCard Style="border:1px solid #E2E7F4; padding: 1px;" Class="py-3 mt-4 rounded-5">
-                                                        <MDataTable FixedHeader Style="max-height: 312px; overflow: auto;" Headers="Headers"
-                                                                SortDesc="true"
-                                                                SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
-                                                                TItem="ConfigObjectPropertyModel"
-                                                                Items="@configObject.ConfigObjectPropertyContents"
-                                                                Class="table-border-none"
-                                                                HideDefaultFooter>
+                                                        <MCard Style="border:1px solid #E2E7F4; padding: 1px;" Class="py-2 mt-4 rounded-5">
+                                                            <MDataTable FixedHeader
+                                                                        Style="max-height: 312px; overflow: auto; border-radius: unset !important;"
+                                                                        Headers="Headers"
+                                                                        SortDesc="true"
+                                                                        SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
+                                                                        TItem="ConfigObjectPropertyModel"
+                                                                        Items="@configObject.ConfigObjectPropertyContents"
+                                                                        Class="table-border-none"
+                                                                        HideDefaultFooter>
                                                                 <HeaderColContent Context="header">
                                                                     <span class="regular3--text btn">@header.Text</span>
                                                                 </HeaderColContent>
@@ -252,28 +256,28 @@
                                                                     @switch (@context.Header.Value)
                                                                     {
                                                                         case nameof(ConfigObjectPropertyModel.IsPublished):
-                                                                            <div class="d-inline-flex m-0 p-0">
-                                                                            @if (context.Item.IsPublished)
-                                                                            {
-                                                                                <MIcon Class="mr-1" Style="margin-bottom:2px;color: #05CD99 !important;" Size="16">mdi-link-variant</MIcon>
-                                                                                <span class="green--text">@T("Released")</span>
-                                                                            }
-                                                                            else
-                                                                            {
-                                                                                if (context.Item.IsAdded)
+                                                                            <div class="d-inline-flex m-0 p-0 text-overflow">
+                                                                                @if (context.Item.IsPublished)
                                                                                 {
-                                                                                    <MIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16">mdi-plus</MIcon>
+                                                                                    <MIcon Class="mr-1" Style="margin-bottom:2px;color: #05CD99 !important;" Size="16">mdi-link-variant</MIcon>
+                                                                                    <span class="green--text">@T("Released")</span>
                                                                                 }
-                                                                                else if (context.Item.IsEdited)
+                                                                                else
                                                                                 {
-                                                                                    <MIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16">mdi-pencil</MIcon>
+                                                                                    if (context.Item.IsAdded)
+                                                                                    {
+                                                                                        <MIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16">mdi-plus</MIcon>
+                                                                                    }
+                                                                                    else if (context.Item.IsEdited)
+                                                                                    {
+                                                                                        <MIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16">mdi-pencil</MIcon>
+                                                                                    }
+                                                                                    else if (context.Item.IsDeleted)
+                                                                                    {
+                                                                                        <MIcon Class="mr-1" Style="margin-bottom:2px;color: #A3AED0 !important;" Size="16">mdi-delete</MIcon>
+                                                                                    }
+                                                                                    <span>@T("UnReleased")</span>
                                                                                 }
-                                                                                else if (context.Item.IsDeleted)
-                                                                                {
-                                                                                    <MIcon Class="mr-1" Style="margin-bottom:2px;color: #A3AED0 !important;" Size="16">mdi-delete</MIcon>
-                                                                                }
-                                                                                <span>@T("UnReleased")</span>
-                                                                            }
                                                                             </div>
                                                                             break;
                                                                         case "Operation":
@@ -287,7 +291,7 @@
                                                                             <DateTimeZone Value="@context.Item.ModificationTime" />
                                                                             break;
                                                                         default:
-                                                                            @context.Value
+                                                                            <div style="width: 135px;" class="text-overflow">@context.Value</div>
                                                                             break;
                                                                     }
                                                                 </ItemColContent>
