--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -1,5 +1,5 @@
 ﻿@page "/{AppId:int}/{EnvironmentClusterId:int}/{ConfigObjectType:int}/Config"
-@inherits MasaCompontentBase
+@inherits MasaComponentBase
 
 <MRow>
     <MCol Cols="2">
