--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseHistoryModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseHistoryModal.razor
@@ -1,4 +1,4 @@
-@inherits MasaCompontentBase
+@inherits MasaComponentBase
 
 <SSheetDialog EnableDomReload @bind-Value="Value" Title="@T("Release history")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
