--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
@@ -1,5 +1,5 @@
 ﻿@page "/projectlist/{EnvironmentClusterId:int}"
-@inherits MasaCompontentBase
+@inherits MasaComponentBase
 
 
 <div class="full-height rounded-4" style="overflow: auto;">
