--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -1,5 +1,5 @@
 ﻿@page "/team"
-@inherits MasaCompontentBase;
+@inherits MasaComponentBase;
 @inject MasaBlazor MasaBlazor
 
 <PageTitle>@T("Team")</PageTitle>
