--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/AddConfigObjectModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/AddConfigObjectModal.razor
@@ -1,4 +1,4 @@
-﻿@inherits MasaCompontentBase
+﻿@inherits MasaComponentBase
 
 <SSheetDialog EnableDomReload Value="Value" ValueChanged="SheetDialogValueChangedAsync" Title="@T("Add config object")" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_addConfigObjectModal.Data">
