--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -1,4 +1,4 @@
-﻿@inherits MasaCompontentBase
+﻿@inherits MasaComponentBase
 
 <SSheetDialog EnableDomReload Value="Value" ValueChanged="SheetDialogValueChanged" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
