--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -12,9 +12,10 @@
             <MChipGroup Multiple Column @bind-Values="_selectToEnvClusterIds">
                 @foreach (var item in AppDetail.EnvironmentClusters)
                 {
-                    <MChip Value="item.Id" Large Class="envClusterChip mr-6 mb-6" Filter Outlined ActiveClass="@($"{item.EnvironmentColor}")">
-                        <div style="@($"color: {item.EnvironmentColor} !important")">@item.EnvironmentName</div>&nbsp;&nbsp;
-                        <div style="color:#05CD99">@item.ClusterName</div>
+                    <MChip Value="item.Id" Large Class="envClusterChip mr-6 mb-6 m-chip--envcluster" Filter Outlined Style=@($"border-color:{item.EnvironmentColor};color:{item.EnvironmentColor}")>
+                        <div style="@($"color: {item.EnvironmentColor} !important")">@item.EnvironmentName</div>
+                        <span class="split--text">&nbsp; | &nbsp;</span>
+                        <div class="emphasis2--text">@item.ClusterName</div>
                     </MChip>
                 }
             </MChipGroup>
